<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item_home"
        android:icon="@drawable/ic_home"
        android:title="@string/main_item_home"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/item_news"
        android:icon="@drawable/ic_new_releases"
        android:title="@string/main_item_news"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/item_favourite"
        android:icon="@drawable/ic_favorite"
        android:title="@string/main_item_favourite"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/item_profile"
        android:icon="@drawable/ic_supervised_user_circle"
        android:title="@string/main_item_profile"
        app:showAsAction="ifRoom" />

</menu>