<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#ebf7ff"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tabNameTextView"
        android:textSize="18sp"
        android:text="@string/simple_text_tab_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/depthTextView"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Depth: 0"/>

    <TextView
        android:id="@+id/savedStateTextView"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Saved state: null"/>

    <Button
        android:id="@+id/addButton"
        android:text="@string/simple_button_add"
        android:layout_marginTop="36dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/addProfileButton"
        android:text="@string/simple_button_add_profile"
        android:layout_marginTop="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/replaceWithProfileButton"
        android:text="@string/simple_button_replace_with_profile"
        android:layout_marginTop="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
</LinearLayout>