<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#fff1eb"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tabNameTextView"
        android:textSize="18sp"
        android:text="@string/simple_text_tab_news"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/depthTextView"
        android:textSize="18sp"
        android:layout_marginTop="16dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Depth: 0"/>

    <Button
        android:id="@+id/addButton"
        android:text="@string/simple_button_add"
        android:layout_marginTop="36dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/switchToHomeButton"
        android:text="@string/simple_button_switch_to_home"
        android:layout_marginTop="12dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
</LinearLayout>